test: implement insert, delete test